# MCP

./: .gitignore  QUICKSTART.md  ReadMe.md  WEBSEARCH_INTEGRATION_SUMMARY.txt  WEBSEARCH_SETUP.md  ai_chat_assistant.py  authenticate_google.py  docker-compose.yml  main_mcp_server.py  pyproject.toml  setup.py  start.sh  start_websearch.sh  test_ai_meeting.py  test_all_servers.py  test_calendar.py  test_email.py  test_pdf_reader.py  test_simple_pdf.py  test_websearch.py
mcp_servers/: ask_questions.py  email_sender.py  meeting_scheduler.py  pdf_reader.py  pizza_ordering.py  web_search.py
