[project]
name = "model-context-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.19.0",
    "resend>=0.8.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "anthropic>=0.18.0",
]
